[package]
authors = ["Zeyla Hellyer <zey@zey.moe>"]
description = "An unofficial Rust wrapper for the darksky.net API."
documentation = "https://docs.rs/darksky"
homepage = "https://github.com/zeyla/darksky.rs"
license = "ISC"
keywords = [
    "api",
    "dark",
    "darksky",
    "sky",
    "weather",
]
name = "darksky"
readme = "README.md"
repository = "https://github.com/zeyla/darksky.rs.git"
version = "0.7.0"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

[dependencies.futures]
optional = true
version = "~0.1"

[dependencies.hyper]
optional = true
version = "~0.11"

[dependencies.reqwest]
optional = true
version = "~0.8"

[dev-dependencies]
hyper-tls = "~0.1"
tokio-core = "~0.1"

[features]
default = ["hyper-support"]
hyper-support = ["futures", "hyper"]
