[package]
authors = ["Zeyla Hellyer <zey@zey.moe>"]
description = "An unofficial Rust wrapper for the darksky.net API."
documentation = "https://docs.rs/darksky"
homepage = "https://github.com/zeyla/darksky.rs"
license = "ISC"
keywords = [
    "api",
    "dark",
    "darksky",
    "sky",
    "weather",
]
name = "darksky"
readme = "README.md"
repository = "https://github.com/zeyla/darksky.rs.git"
version = "0.8.1"

[dependencies]
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.28"

futures = { version = "0.1.24", optional = true }
hyper = { version = "0.12.10", optional = true }
http = { version = "0.1.13", optional = true }

reqwest = { version = "0.9.1", optional = true }

[dev-dependencies]
hyper-tls = "0.3.0"
tokio-core = "0.1.17"

[features]
default = ["hyper-support"]
hyper-support = ["futures", "hyper", "http"]

[package.metadata.docs.rs]
all-features = true
